Closed Bug 1829979 Opened 1 year ago Closed 1 year ago

Crash at [@ nsMsgDBView::ToggleIgnored ]

Categories

(Thunderbird :: General, defect)

Thunderbird 102
defect

Tracking

(thunderbird_esr102 fixed, thunderbird113+ fixed)

RESOLVED FIXED
114 Branch
Tracking Status
thunderbird_esr102 --- fixed
thunderbird113 + fixed

People

(Reporter: mkmelin, Assigned: mkmelin)

References

Details

Crash Data

Attachments

(1 file)

Target Milestone: --- → 114 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/7dbc6ae80ab5
Fix crash at [@ nsMsgDBView::ToggleIgnored ]. r=benc

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED

I'd like to take this for the next beta, if OK with you.

Flags: needinfo?(mkmelin+mozilla)

Yes, that's good

Flags: needinfo?(mkmelin+mozilla)

Comment on attachment 9330281 [details]
Bug 1829979 - Fix crash at [@ nsMsgDBView::ToggleIgnored ]. r=BenC

[Triage Comment]
Approved for beta

Attachment #9330281 - Flags: approval-comm-beta+

Comment on attachment 9330281 [details]
Bug 1829979 - Fix crash at [@ nsMsgDBView::ToggleIgnored ]. r=BenC

[Approval Request Comment]
Safe crash fix.

Attachment #9330281 - Flags: approval-comm-esr102?

Comment on attachment 9330281 [details]
Bug 1829979 - Fix crash at [@ nsMsgDBView::ToggleIgnored ]. r=BenC

[Triage Comment]
Approved for esr102

Attachment #9330281 - Flags: approval-comm-esr102? → approval-comm-esr102+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: