Bug 1829979 - Fix crash at [@ nsMsgDBView::ToggleIgnored ]. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D176485

--HG--
extra : rebase_source : 5c8bcbd147163e88d53613ac880e73fdf951a768